--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="styles.css">
     <!-- JS files -->
-    <script src="app.js" defer></script>
+    <script src="config.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div id="root"></div>
