feat: add top header with search input

--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
     <!-- JS files -->
     <script src="config.js" defer></script>
     <script src="script.js" defer></script>
+    <!-- Google icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <div class="title-container">
+            <span class="material-icons material-icons-round">photo_camera</span>
+            <h1>Image Gallery</h1>
+        </div>
+        <div class="input-container">
+            <span class="material-icons material-icons-outlined">search</span>
+            <input type="text" id="input" placeholder="Search...">
+        </div>
+    </header>
     <div id="root"></div>
 </body>
 </html>
