refactor: add type module

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
     <!-- JS files -->
     <script src="config.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="script.js" type="module" defer></script>
     <!-- Google icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
