--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     <!-- CSS files -->
     <link rel="stylesheet" href="styles.css">
     <!-- JS files -->
-    <script src="config.js" defer></script>
-    <script src="script.js" type="module" defer></script>
+    <script src="script.js" type="module"></script>
     <!-- Google icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
